--- a/app/src/main/res/layout/activity_linear.xml
+++ b/app/src/main/res/layout/activity_linear.xml
@@ -15,7 +15,10 @@
         android:layout_marginEnd="2dp"
         android:background="#c90076"
         android:text="03"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView1"
@@ -28,7 +31,10 @@
         android:layout_gravity="center_horizontal"
         android:background="#008060"
         android:text="04"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -38,7 +44,10 @@
         android:layout_height="361dp"
         android:layout_gravity="center_horizontal"
         android:text="01"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:gravity="center"
         android:background="#00acd0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +59,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="1dp"
         android:text="02"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="30sp"
         android:background="#008060"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +76,10 @@
         android:layout_marginEnd="148dp"
         android:background="#002e51"
         android:text="05"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,7 +93,8 @@
         android:layout_gravity="center_horizontal"
         android:background="#c5081d"
         android:text="06"
-        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,7 +106,8 @@
         android:layout_marginTop="2dp"
         android:background="#00acd0"
         android:text="06"
-        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView8"
         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -103,7 +120,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="2dp"
         android:text="07"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textSize="40sp"
         android:background="#ffca2b"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
