--- a/app/src/main/res/layout/activity_linear2.xml
+++ b/app/src/main/res/layout/activity_linear2.xml
@@ -12,7 +12,10 @@
         android:layout_width="407dp"
         android:layout_height="184dp"
         android:text="01"
-        android:textSize="24sp"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:background="#c5081d"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +26,11 @@
         android:layout_width="170dp"
         android:layout_height="545dp"
         android:background="#ffca2b"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:text="02"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -34,8 +40,11 @@
         android:layout_width="242dp"
         android:layout_height="381dp"
         android:background="#00acd0"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:text="03"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -45,8 +54,11 @@
         android:layout_width="125dp"
         android:layout_height="177dp"
         android:background="#f4cccc"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:text="04"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -57,8 +69,11 @@
         android:layout_height="176dp"
         android:layout_marginTop="1dp"
         android:background="#800060"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:text="05"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView11"
