--- a/app/src/main/res/menu/menu_setting.xml
+++ b/app/src/main/res/menu/menu_setting.xml
@@ -1,30 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuSetting"
-        android:title="Setting"
-        android:icon="@android:drawable/ic_menu_preferences"
-        app:showAsAction="always"/>
-
+        android:title="Setting" />
     <item
         android:id="@+id/menuShare"
-        android:title="Share"
-        android:icon="@android:drawable/ic_menu_share"
-        app:showAsAction="ifRoom"/>
-
+        android:title="Share" />
     <item
         android:id="@+id/menuLogout"
-        android:title="Logout"
-        android:icon="@android:drawable/ic_lock_power_off"
-        app:showAsAction="never"/>
-
-    <item
-        android:title="Menu con"
-        android:orderInCategory="3">
-        <menu>
-            <item android:title="Menu con 1"/>
-            <item android:title="Menu con 2"/>
-        </menu>
-    </item>
+        android:title="Logout" />
 </menu>
